--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,15 @@
+@import url('https://fonts.cdnfonts.com/css/cloudy-night');
+@import url('https://fonts.cdnfonts.com/css/christmas-classica');
+
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Mountains of Christmas';font-size: 25px;
     text-align: center;
-    background-color: #008080;
     background-image: linear-gradient(to top, #dbdcd7 0%, #dddcd7 24%, #e2c9cc 30%, #e7627d 46%, #b8235a 59%, #801357 71%, #3d1635 84%, #1c1a27 100%);
     color: #333;
     margin: 0;
     padding: 0;
     overflow: hidden;
 }
-
 
 
 /* snowflakes */
@@ -66,7 +67,7 @@ body {
 
 
 header {
-
+    font-family: 'Cloudy Night', sans-serif;
     color: #fff;
     padding: 1px;
 }
@@ -97,15 +98,15 @@ main {
 
 .mabuot{
     color: white;
-    font-size: 15px;
+    font-size: 20px;
 }
 
 button {
     margin: 10px;
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 15px;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
 }
 
@@ -114,6 +115,7 @@ button:hover {
 }
 
 #play-button {
+    font-family: 'Christmas Classica', sans-serif;
     background-color: #4caf50;
     color: white;
 }
@@ -192,9 +194,10 @@ footer {
 
 /* countdownnnnnn */
 .countdown {
+    font-size: 10px;
     background-color: #800000;
     color: white;
-    padding: 20px;
+    padding: 15px;
     margin: 20px auto;
     border-radius: 10px;
     text-align: center;
@@ -204,7 +207,7 @@ footer {
 }
 
 #time-remaining {
-    font-size: 15px;
+    font-size: 25px;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 5px;
 }
