--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.cdnfonts.com/css/cloudy-night');
-@import url('https://fonts.cdnfonts.com/css/christmas-classica');
+@import url('https://fonts.cdnfonts.com/css/margesh');
 
 body {
-    font-family: 'Mountains of Christmas';font-size: 25px;
+    font-family: 'margesh';
     text-align: center;
     background-image: linear-gradient(to top, #dbdcd7 0%, #dddcd7 24%, #e2c9cc 30%, #e7627d 46%, #b8235a 59%, #801357 71%, #3d1635 84%, #1c1a27 100%);
     color: #333;
@@ -131,10 +131,13 @@ button:hover {
 }
 
 footer {
+    font-family: 'Christmas Classica', sans-serif;
+    font-size: 15px;
     color: white;
     padding: 1px 0;
     position: fixed;
     bottom: 0;
+    height: 38px;
     width: 100%;
 }
 
